--- a/FinancialAssistant.Web/FinancialAssistant.Web.csproj
+++ b/FinancialAssistant.Web/FinancialAssistant.Web.csproj
@@ -10,4 +10,20 @@
     <None Include="wwwroot\css\styles.css" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Npgsql" Version="8.0.3" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FinancialAssistant.DataAccess\FinancialAssistant.DataAccess.csproj" />
+    <ProjectReference Include="..\FinancialAssistant.DataTransfer\FinancialAssistant.DataTransfer.csproj" />
+    <ProjectReference Include="..\FinancialAssistant.Repository\FinancialAssistant.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
