--- a/FinancialAssistant.Web/appsettings.json
+++ b/FinancialAssistant.Web/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "TokenKey": "G8n3kL2zQ9vF5xR8sT1jYwP4mB7eA6qZ",
+  "ConnectionStrings": {
+    "DataBase": "Host=localhost;Port=5432;Database=FinancialAssistantWeb;Username=postgres;Password=zsefbjikmjytqwert;Include Error Detail=true"
+  }
 }
