feat: add an identity project. Add many repositories. Change the user service.

--- a/FinancialAssistant.Authentication/FinancialAssistant.Authentication.csproj
+++ b/FinancialAssistant.Authentication/FinancialAssistant.Authentication.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <ProjectReference Include="..\FinancialAssistant.DataTransfer\FinancialAssistant.DataTransfer.csproj" />
       <ProjectReference Include="..\FinancialAssistant.Repository\FinancialAssistant.Repository.csproj" />
+      <ProjectReference Include="..\FinancialAssistant.UserIdentity\FinancialAssistant.UserIdentity.csproj" />
     </ItemGroup>
 
     <ItemGroup>
