--- a/FinancialAssistant.Authentication/FinancialAssistant.Authentication.csproj
+++ b/FinancialAssistant.Authentication/FinancialAssistant.Authentication.csproj
@@ -15,6 +15,7 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
       <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="7.1.2" />
+      <PackageReference Include="OneOf" Version="3.0.271" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
     </ItemGroup>
 
