--- a/FinancialAssistant.Web/FinancialAssistant.Web.csproj
+++ b/FinancialAssistant.Web/FinancialAssistant.Web.csproj
@@ -35,4 +35,8 @@
     <ProjectReference Include="..\FinancialAssistant.Repository\FinancialAssistant.Repository.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Filters\" />
+  </ItemGroup>
+
 </Project>
