feat: add accounts controller.

--- a/FinancialAssistant.Web/FinancialAssistant.Web.csproj
+++ b/FinancialAssistant.Web/FinancialAssistant.Web.csproj
@@ -36,6 +36,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers\Accounts\Requests\" />
+    <Folder Include="Controllers\Accounts\Responses\" />
     <Folder Include="Filters\" />
   </ItemGroup>
 
