--- a/.github/workflows/dotnet-litter.yml
+++ b/.github/workflows/dotnet-litter.yml
@@ -3,10 +3,10 @@ name: .NET Core CI with Litters
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   build:
