--- a/.github/workflows/dotnet-litter.yml
+++ b/.github/workflows/dotnet-litter.yml
@@ -18,8 +18,10 @@ jobs:
 
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
+      continue-on-error: true
       with:
         dotnet-version: '8.x'
+        dotnet-quality: 'ga'
 
     - name: Install Litters
       run: dotnet tool install --global StyleCop.Analyzers
