--- a/FinancialAssistant.Web/FinancialAssistant.Web.csproj
+++ b/FinancialAssistant.Web/FinancialAssistant.Web.csproj
@@ -36,6 +36,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers\Transactions\Requests\" />
     <Folder Include="Filters\" />
   </ItemGroup>
 
